--- a/platformio.ini
+++ b/platformio.ini
@@ -12,10 +12,12 @@
 platform = espressif32
 board = m5stick-c
 framework = arduino
+upload_speed = 1500000
 monitor_speed = 115200
 lib_deps = 
 	bblanchon/ArduinoJson@^7.1.0
 	256dpi/MQTT@^2.5.2
 	m5stack/M5Unified@^0.1.16
 	adafruit/Adafruit SGP30 Sensor@^2.0.3
-	;m5stack/M5StickC@^0.2.5
+	sensirion/arduino-sht@^1.2.5
+	m5stack/M5Unit-ENV@^1.0.1
